--- a/goksoyakademi/frontend/package.json
+++ b/goksoyakademi/frontend/package.json
@@ -20,8 +20,10 @@
     "font-awesome-icons": "^1.6.0",
     "formik": "^2.4.2",
     "framer-motion": "^7.3.5",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
